antd migrate 4 to 5

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import '~antd/dist/antd.css';
-
+@import 'antd/dist/reset.css';
+/* 
 #components-layout-demo-responsive .logo {
   height: 32px;
   margin: 16px;
@@ -17,4 +17,4 @@
 .ant-page-header-ghost {
   padding: 0px 0px 15px 0px !important;
 
-}
+} */
