--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 .site-layout-sub-header-background {
   background: #fff;
 }
-
+*/
 .site-layout-background {
   background: #fff;
 }
@@ -17,4 +17,4 @@
 .ant-page-header-ghost {
   padding: 0px 0px 15px 0px !important;
 
-} */
+} 
